--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "prism-theme-vars": "^0.2.3",
+    "sass": "^1.52.1",
     "vue": "^3.2.36",
     "vue-demi": "^0.12.5",
     "vue-i18n": "^9.1.10",
