--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "salmonstats-vue",
   "version": "0.0.1",
   "private": true,
+  "description": "An Ionic project",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": "vue-cli-service build && firebase deploy",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint"
@@ -18,7 +20,13 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.2",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.21",
+    "vue-cli-plugin-yaml": "^1.0.2",
+    "vue-gtag-next": "^1.14.0",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
@@ -29,6 +37,7 @@
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
@@ -43,6 +52,5 @@
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
-  },
-  "description": "An Ionic project"
+  }
 }
