--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
-    "@ionic/vue": "^6.0.0",
+    "@ionic/cli": "^6.20.1",
+    "@ionic/vue": "^6.1.15",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.2",
