--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve:dev": "vue-cli-service serve --mode development",
     "serve:prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
+    "build:vite": "vue-tsc --noEmit && vite build",
     "deploy": "vue-cli-service build && firebase deploy",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
@@ -22,6 +23,7 @@
     "@ionic/vue": "^6.1.15",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.4",
     "register-service-worker": "^1.7.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
@@ -36,6 +38,7 @@
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
@@ -53,6 +56,8 @@
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vite": "^3.0.2",
+    "vue-tsc": "^0.38.9"
   }
 }
