--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@ionic/cli": "^6.20.1",
     "@ionic/vue": "^6.1.15",
     "@ionic/vue-router": "^6.0.0",
+    "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.4",
     "register-service-worker": "^1.7.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "vue": "^3.2.21",
+    "vue-chartjs": "^4.1.1",
     "vue-cli-plugin-yaml": "^1.0.2",
     "vue-gtag-next": "^1.14.0",
     "vue-i18n": "^9.1.10",
