--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "An Ionic project",
   "scripts": {
+    "dev": "yarn vite",
     "serve:dev": "vue-cli-service serve --mode development",
     "serve:prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
@@ -21,7 +22,8 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/cli": "^6.20.1",
     "@ionic/vue": "^6.1.15",
-    "@ionic/vue-router": "^6.0.0",
+    "@ionic/vue-router": "^6.1.15",
+    "@vue/compiler-sfc": "^3.2.37",
     "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.4",
