--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic/vue": "^6.1.15",
     "@ionic/vue-router": "^6.1.15",
     "@vue/compiler-sfc": "^3.2.37",
+    "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.4",
