--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "register-service-worker": "^1.7.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "tsdoc": "^0.0.4",
     "vue": "^3.2.21",
     "vue-chartjs": "^4.1.1",
     "vue-cli-plugin-yaml": "^1.0.2",
